1增加一些注释

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
 		up.setAccept('image/png,image/gif,image,jpgimage/jepg');
 	});
 	$("#clearCache").click(function(){
-		up.resetFiles();
+		up.resetAllFile();
 	});
 
 </script>
